# parallel-nqueens-problem-satoshi

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: format.hpp  nqueens.hpp  utils.hpp
include/config/: common.hpp
src/: format.cpp  main.cpp  nqueens.cpp  utils.cpp
